# bolatu-bot

./: .dockerignore  .env.example  .gitignore  AI_PROJECT_GUIDE.md  Dockerfile.server  README.md  SERVER_DEPLOY.md  bot.py  config.yaml  docker-compose.server.yml  pyproject.toml
data/: bot.sqlite3
personas/: zhangxuefeng.yaml
prompts/: zhangfengxue.yaml  zhangfengxue_rewrite_worksheet.md
qq_social_agent/: __init__.py  approval_models.py  approval_rules.py  background_learning.py  config.py  content_ingestion.py  context_assembler.py  cue_patterns.py  decision_gate.py  deepseek_client.py  delivery.py  embedding_client.py  group_directory.py  group_jargon.py  history_sync.py  media_context.py  memory.py  memory_learning.py  message_segments.py  notice_events.py  observability.py  onebot_gateway.py  persona.py  pipeline_stages.py  pipeline_types.py  plugin.py  political_guard.py  prompts.py  rag_admin.py  rag_indexer.py  rag_query.py  rag_retriever.py  rag_router.py  rag_store.py  rate_limiter.py  reference_resolver.py  reply_splitter.py  scorer.py  siliconflow_ocr.py  social_actions.py  (+4 more)
scripts/: codex_proxy_tunnel.sh  com.ywbw.qq-social-agent.plist  db_hygiene.py  direct_http_proxy.py  dirty_work_report.py  restart_bot.sh  start_bot.sh  start_bot_daemon.sh  start_napcat.sh  status.sh  stop_bot.sh  system_hygiene.sh
tests/: test_config.py  test_content_ingestion.py  test_cue_patterns.py  test_deep_content.py  test_deepseek_client.py  test_delivery.py  test_file_content_reader.py  test_first_batch_social_features.py  test_fresh_context.py  test_group_jargon.py  (+23 more)
(+8 files in other folders)
