[project]
name = "qq-social-agent"
version = "0.1.0"
description = "A QQ group social agent with persona skills, passive reply scoring, and DeepSeek chat."
requires-python = ">=3.9"
dependencies = [
  "nonebot2[fastapi,httpx,websockets]>=2.4.0,<3.0.0",
  "nonebot-adapter-onebot>=2.4.0,<3.0.0",
  "openai>=1.90.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "yfinance>=0.2.50,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["qq_social_agent", "qq_social_agent.tools"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
